# image_search

./: README.md
image_search/: CMakeLists.txt
image_search/include/: ColorDescriptor.hpp  Searcher.hpp  common.hpp
image_search/src/: ColorDescriptor.cpp  Searcher.cpp  index.cpp  search.cpp
